--- a/package.json
+++ b/package.json
@@ -14,21 +14,29 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "ts-node"
+    "ts": "tsx"
   },
   "devDependencies": {
-    "@types/node": "18.16.3",
+    "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "5.46.0",
     "@typescript-eslint/parser": "5.46.0",
     "eslint": "8.39.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "eslint-config-prettier": "^10.1.8",
     "rimraf": "3.0.2",
     "ts-node": "10.9.1",
+    "tsx": "^4.21.0",
     "typescript": "4.9.5"
   },
   "type": "module",
   "engines": {
     "node": "^18.0.0",
     "npm": ">=8"
+  },
+  "extends": [
+    "plugin:prettier/recommended"
+  ],
+  "dependencies": {
+    "chalk": "^5.6.2"
   }
 }
